--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -53,7 +53,7 @@
                             <ul class="submenu-departamentos-mobile">
                                 <li onclick="location.href='/produtosPorCategoria/1';"><a>Notebook</a></li>
                                 <li onclick="location.href='/produtosPorCategoria/2';"><a>Smartphone</a></li>
-                                <li onclick="location.href='/produtosPorCategoria/3';"><a>Descktop</a></li>
+                                <li onclick="location.href='/produtosPorCategoria/3';"><a>Desktop</a></li>
                                 <li onclick="location.href='/produtosPorCategoria/4';"><a>Hardware</a></li>
                                 <li onclick="location.href='/produtosPorCategoria/5';"><a>Tablet</a></li>
                                 <li onclick="location.href='/produtosPorCategoria/6';"><a>Periféricos</a></li>
@@ -134,7 +134,7 @@
                                 
                             <li onclick="location.href='/produtosPorCategoria/1';"><a>Notebook</a></li>
                             <li onclick="location.href='/produtosPorCategoria/2';"><a>Smartphone</a></li>
-                            <li onclick="location.href='/produtosPorCategoria/3';"><a>Descktop</a></li>
+                            <li onclick="location.href='/produtosPorCategoria/3';"><a>Desktop</a></li>
                             <li onclick="location.href='/produtosPorCategoria/4';"><a>Hardware</a></li>
                             <li onclick="location.href='/produtosPorCategoria/5';"><a>Tablet</a></li>
                             <li onclick="location.href='/produtosPorCategoria/6';"><a>Periféricos</a></li>
