--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -43,7 +43,7 @@
                                 </div>
                             </div>
                             
-                            <a class="btn-alterar-senha" href="">
+                            <a class="btn-alterar-senha" href="/usuario/alterar-senha">
                                 <span class="material-icons">lock</span> ALTERAR SENHA
                             </a>
                         </div>
@@ -120,7 +120,7 @@
                                     </div>
                                 </div>
                                 <div class="btn-ver-todos-pedidos">
-                                    <a href="#">VER TODOS OS PEDIDOS</a>
+                                    <a href="/usuario/meus-pedidos">VER TODOS OS PEDIDOS</a>
                                 </div>                            
                             </div>
 
