Foi corrigido o cógido que altera a senha do usuário.

--- a/views/alterar-senha.ejs
+++ b/views/alterar-senha.ejs
@@ -48,6 +48,13 @@
                             <br>       
                         <% } %>
 
+                        <% if(locals.statusAlteracaoSenha && statusAlteracaoSenha == "erroSenhaAtual") { %>                            
+                            <p  class="msgStatusErro">
+                                Senha  <b>atual incorreta</b>! O processo não foi concluído!                                
+                            </p>  
+                            <br>     
+                        <% } %>
+
                         <% if(locals.statusAlteracaoSenha && statusAlteracaoSenha == "erro") { %>                            
                             <p  class="msgStatusErro">
                                 <strong><%=msgErro%>!</strong> O processo não foi concluído!                                
